   * Fixed: wesnoth.find_reach does no longer replace a passed private lua
     proxy unit with the on-map unit at the same location
   * new: helper.round function
   * wesnoth.scroll_to_tile() now takes a fourth optional argument (boolean)
     specifying whether to ignore the scroll speed setting in Preferences and
     instantly warp to the given location
 * Multiplayer:
   * A New Land:
     * Made it so that the "Elvish Shaman" option in the elvish unit selection
       menu gets translated. Fixes bug #19677.
   * Fix an accidental terrain type change in Isar's Cross
   * Fix attacker side being human in 6p_Team_Survival (bug #19400)
   * Ignore Pango markup in map descriptions (bug #19210)
   * Canceling the sides setup screen when hosting a MP game now brings the
     host back to the game configuration screen first instead of returning
     immediately to the lobby or (for hotseat) titlescreen (bug #7130)
   * The Set Password action is no longer shown for local hotseat games
     (bug #10784)
   * Changes to the time of day schedules of Fallenstar Lake and Silverhead
     Crossing
   * Random leader is default selection when picking faction
 * Music and sound effects:
   * Replaced some of the wolf hit sounds with lower-pitched ones
 * Terrain:
   * New Syntax for terrain maps
   * New tropical forest images
   * New palm forest terrain
   * Deprecated flowers (Ggf) and Volcano (Qv) removed - use Gg^Efm and Mv
     respectively
   * Fix bridge/rail transitions to each other
   * Add new rail terrain type; no existing unit can move on it, so their
     move/defense values are unchanged
   * New stone, hanging, and wooden chasm bridges
   * Fix bug #19753, missing hex transition
 * Unit changes and balancing:
   * New extra_define ENABLE_WOLF_ADVANCEMENT to optionally enable Wolves
     advancement to Great Wolves and Direwolves
   * New extra_define ENABLE_TROLL_SHAMAN to optionally enable Troll Whelps
     advancement to Troll Shamans (not in multiplayer)